<resources>
    <string name="camera_permission_denied">You have denied access to the camera.\nYou must authorize it to scan a barcode.</string>
    <string name="close_dialog_label">Close</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="go_to_dialog_label">Enter website</string>
    <string name="image_view_description_flag">Flag</string>
    <string name="image_view_description_logo">Logo</string>
    <string name="image_view_description_type_icon">Type</string>
    <string name="image_view_description_bar_code">Barcode</string>
    <string name="image_view_description_icon">Icon</string>
    <string name="image_view_description_product_front">Product picture</string>
    <string name="image_view_description_nutriscore">NUTRI-SCORE</string>
    <string name="image_view_description_nova_group">NOVA GROUP</string>
    <string name="image_view_description_eco_score">ECO SCORE</string>
    <string name="image_view_description_background">Background</string>
    <string name="image_view_description_image">Image</string>
    <string name="slider_description_zoom">Zoom</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_generate">Generate</string>
    <string name="title_settings">Settings</string>
    <string name="title_qr_code_creator">Generate a QR Code</string>
    <string name="title_bar_code_creator">Generate a barcode</string>
    <string name="information_label">Information</string>
    <string name="barcode_label">Barcode</string>
    <string name="download_from_api_label">Download from APIs</string>
    <string name="menu_more">More</string>
    <string name="barcode_qr_code_label">QR Code</string>
    <string name="barcode_data_matrix_label">Data Matrix</string>
    <string name="barcode_pdf_417_label">PDF 417</string>
    <string name="barcode_aztec_label">AZTEC</string>
    <string name="barcode_ean_13_label">EAN 13</string>
    <string name="barcode_ean_8_label">EAN 8</string>
    <string name="barcode_upc_a_label">UPC A</string>
    <string name="barcode_upc_e_label">UPC E</string>
    <string name="barcode_code_128_label">Code 128</string>
    <string name="barcode_code_93_label">Code 93</string>
    <string name="barcode_code_39_label">Code 39</string>
    <string name="barcode_codabar_label">Codabar</string>
    <string name="barcode_itf_label">ITF</string>
    <string name="qr_code_type_name_text">Text</string>
    <string name="qr_code_type_name_web_site">Website</string>
    <string name="qr_code_type_name_contact">Contact</string>
    <string name="qr_code_type_name_epc">EPC QR Code</string>
    <string name="qr_code_type_name_mail">Mail</string>
    <string name="qr_code_type_name_sms">SMS</string>
    <string name="qr_code_type_name_phone">Phone number</string>
    <string name="qr_code_type_name_geographic_coordinates">Geographic coordinates</string>
    <string name="qr_code_type_name_agenda">Agenda</string>
    <string name="qr_code_type_name_wifi">Wi-Fi</string>
    <string name="qr_code_type_name_apps">Application</string>
    <string name="bar_code_type_unknown_product">Product</string>
    <string name="bar_code_type_food">Food Product</string>
    <string name="bar_code_type_pet_food">Pet Food</string>
    <string name="bar_code_type_beauty">Cosmetic Product</string>
    <string name="bar_code_type_music">Music</string>
    <string name="bar_code_type_unknown_music_album_title">Album title unknown</string>
    <string name="bar_code_type_book">Book</string>
    <string name="bar_code_type_unknown_book_title">Book title unknown</string>
    <string name="bar_code_type_industrial">Industrial Code</string>
    <string name="bar_code_type_unknown_matrix">Matrix Code</string>
    <string name="bar_code_type_name_unknown">Unknown</string>
    <string name="qr_code_error_correction_level_label">Error correction level</string>
    <string name="qr_code_error_correction_level_settings_label">Error correction level (QR Code)</string>
    <string name="qr_code_error_correction_level_name_low">Low (~7%)</string>
    <string name="qr_code_error_correction_level_name_medium">Medium (~15%)</string>
    <string name="qr_code_error_correction_level_name_quartile">Quartile (~25%)</string>
    <string name="qr_code_error_correction_level_name_high">High (~30%)</string>
    <string name="label_history_empty">No elements scanned…</string>
    <string name="snack_bar_message_item_deleted">The product \"%1$s\" has been deleted from history.</string>
    <string name="popup_message_confirmation_delete_history">Delete all history?</string>
    <string name="popup_message_confirmation_delete_selected_items_history">Delete selected items?</string>
    <string name="menu_item_history_delete">Delete history</string>
    <string name="menu_item_history_delete_from_history">Delete from history</string>
    <string name="menu_item_history_removed_from_history">Removed from history!</string>
    <string name="menu_item_history_add_in_history">Add in the history</string>
    <string name="menu_item_history_added_in_history">Added in the history!</string>
    <string name="delete_label">Delete</string>
    <string name="cancel_label">Cancel</string>
    <string name="record_label">Save</string>
    <string name="export_label">Export</string>
    <string name="export_csv_label">Export as CSV</string>
    <string name="export_json_label">Export as JSON</string>
    <string name="import_json_label">Import (JSON)</string>
    <string name="snack_bar_message_file_export_success">File saved!</string>
    <string name="snack_bar_message_file_export_error">An error has occurred! File not saved.</string>
    <string name="snack_bar_message_file_import_success">File imported!</string>
    <string name="snack_bar_message_file_import_error">An error has occurred! File not imported.</string>
    <string name="scan_cancel_label">Scan cancelled!</string>
    <string name="scan_error_exception_label">An error occurred: %1$s</string>
    <string name="flash_label">Flash</string>
    <string name="scan_from_image_label">Image</string>
    <string name="intent_filter_scan_by_image">Scan image</string>
    <string name="scan_information_label">Aim at barcode to scan</string>
    <string name="barcode_information_search_label">Searching…</string>
    <string name="scan_error_label">Error during scanning!</string>
    <string name="scan_error_short_information_label">An error occurred while searching for information!</string>
    <string name="barcode_scanned_label">%1$s scanned!</string>
    <string name="barcode_found_on_label">Found on %1$s!</string>
    <string name="barcode_not_found_on_api_label">No information found on %1$s.</string>
    <string name="no_internet_permission">You don\'t have permission to access the Internet.</string>
    <string name="about_barcode_information_label">Information on barcode</string>
    <string name="about_barcode_label">About barcode</string>
    <string name="about_barcode_format_label">Format: %1$s</string>
    <string name="about_barcode_content_label">Barcode: %1$s</string>
    <string name="about_barcode_origin_label">Origin: </string>
    <string name="product_search_label">Product search</string>
    <string name="no_product_found_label">No product has been found!</string>
    <string name="warning_label">Warning</string>
    <string name="scan_error_information_label">An error occurred while searching information on remote API… Please verify your internet connection and application\'s permissions! If problem persists, it should be a server problem.</string>
    <string name="scan_error_internet_information_label">No information on product retrieved cause you don\'t seem to be connected on the internet!</string>
    <string name="scan_error_message_label">Error message: </string>
    <string name="matrix_phone_tel_number_label">Phone</string>
    <string name="matrix_subject_label">Subject</string>
    <string name="matrix_body_label">Message</string>
    <string name="matrix_uri_url_label">URL</string>
    <string name="matrix_uri_malicious_label">URL may be malicious…</string>
    <string name="preferences_information_about_remote_api_foreword">Foreword</string>
    <string name="preferences_information_about_remote_api_what_is_an_api_title">What is an API?</string>
    <string name="preferences_information_about_remote_api_what_is_an_api_description">An API is a software library used to access a service. In the case of this application, an API is used to access a web service. This web service retrieves information from a database.\nFor example, Open Food Facts is a database of food products and provides an API to access its database. I use this API to display information on food products.</string>
    <string name="preferences_information_about_remote_api_barcode_types_concerned_title">Barcode types concerned</string>
    <string name="preferences_information_about_remote_api_barcode_types_concerned_description">The API search function is only activated for EAN 13, EAN 8, UPC A and UPC E barcodes.</string>
    <string name="preferences_information_about_remote_api_product_types_supported_title">Product types currently supported</string>
    <string name="preferences_information_about_remote_api_product_types_supported_food">• Food products (with Open Food Facts API)</string>
    <string name="preferences_information_about_remote_api_product_types_supported_beauty">• Cosmetic products (with Open Beauty Facts API)</string>
    <string name="preferences_information_about_remote_api_product_types_supported_pet_food">• Pet food products (with Open Pet Food Facts API)</string>
    <string name="preferences_information_about_remote_api_product_types_supported_music">• CDs, Vinyls, … (with MusicBrainz API)</string>
    <string name="preferences_information_about_remote_api_product_types_supported_book">• Books (with Open Library API)</string>
    <string name="preferences_information_about_remote_api_some_additional_information_title">Some additional information</string>
    <string name="preferences_information_about_remote_api_some_additional_information_description_1">• Some products may not be included in certain databases.</string>
    <string name="preferences_information_about_remote_api_some_additional_information_description_2">• There may be some errors in the information provided by the APIs.</string>
    <string name="preferences_information_about_remote_api_how_it_works">How it works</string>
    <string name="preferences_information_about_remote_api_automatic_search_title">Automatic search</string>
    <string name="preferences_information_about_remote_api_automatic_search_description">If the \"%1$s\" option is enabled, when you scan a product barcode, a search is automatically performed on the API selected in the settings. If no information is found on the API, you can always perform a manual search on another API after the scan.</string>
    <string name="preferences_information_about_remote_api_manual_search_title">Manual search</string>
    <string name="preferences_information_about_remote_api_manual_search_description">If the \"%1$s\" option is disabled, when you scan a product barcode, no information is retrieved from the remote servers. But you can always manually search for information on the scanned product. To do this, after scanning the product, click on the icon in the menu bar. You can then select an API to search.</string>
    <string name="preferences_information_about_remote_api_about_books_title">Books</string>
    <string name="preferences_information_about_remote_api_about_books_description">If the product you\'re scanning is a book, you don\'t need to specify the API on which to search for information. A book\'s barcode is identifiable because it always begins with the digits \"978\". The search will automatically be performed on Open Library.</string>
</resources>