<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.barcodeAnalysis.contents.BarcodeMatrixSmsFragment">

    <!-- Phone Number -->
    <com.github.nearapps.barcodescanner.presentation.customView.BarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_sms_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/standard_margin"
        app:title_text="@string/matrix_phone_tel_number_label" />

    <!-- Subject -->
    <com.github.nearapps.barcodescanner.presentation.customView.BarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_sms_subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/x_large_margin"
        android:layout_below="@id/fragment_barcode_matrix_sms_number_layout"
        app:title_text="@string/matrix_subject_label" />

    <!-- Body -->
    <com.github.nearapps.barcodescanner.presentation.customView.BarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_sms_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/x_large_margin"
        android:layout_below="@id/fragment_barcode_matrix_sms_subject_layout"
        app:title_text="@string/matrix_body_label" />

</RelativeLayout>