<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.fragments.main.MainScannerFragment">

    <TextView
        android:id="@+id/fragment_main_scanner_camera_permission_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/camera_permission_denied"
        android:textAlignment="center"
        android:visibility="gone"
        style="@style/AppTheme.TextView.Appearance.Standard.Secondary" />

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/fragment_main_scanner_code_scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:autoFocusButtonVisible="false"
        app:flashButtonVisible="false"
        app:frameColor="@android:color/white"
        app:frameCornersSize="50dp"
        app:frameCornersRadius="0dp"
        app:frameAspectRatioWidth="1"
        app:frameAspectRatioHeight="1"
        app:frameSize="0.75"
        app:frameThickness="2dp"
        app:maskColor="#88000000"
        android:visibility="gone" />

    <com.google.android.material.slider.Slider
        android:id="@+id/fragment_main_scanner_camera_slider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/x_large_margin"
        android:contentDescription="@string/slider_description_zoom"
        android:stepSize="1"
        android:value="0"
        android:valueFrom="0"
        android:valueTo="10"
        android:visibility="invisible"
        app:labelBehavior="gone"
        app:tickVisible="false" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x_large_margin"
        android:layout_gravity="top|center_horizontal">

        <TextView
            android:id="@+id/fragment_main_scanner_information_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_information_label"
            android:visibility="gone"
            android:textColor="@android:color/white"
            style="@style/AppTheme.TextView.Appearance.Standard.Primary" />

    </FrameLayout>

</FrameLayout>